update status code for not found data
